Correzione: chiamata ajax per serie tv + aggiunta del "tipo" nella funzione stampa

--- a/style.css
+++ b/style.css
@@ -12,3 +12,12 @@ header, #risultati {
   width: auto;
   height: 15px;
 }
+
+#risultati-film {
+  width: 50%;
+  height: 100vh;
+}
+
+#risultati-serietv {
+  background-color: yellow;
+}
